# sdlc-agents

./: .dockerignore  .gitignore  PRODUCTION_READY_IMPLEMENTATION.md  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  turbo.json
apps/api/: .env  .env.example  .env.production.example  Dockerfile  Makefile  README.md  alembic.ini  manage.py  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20250808_1733_initial.py  20250809_1644_create_integrations_table.py  20250811_1723_agents.py  20250812_1122_llm_session_id_col.py  20250812_1354_add_integration_unique_constraints.py  20250820_2053_add_agent_identifier.py  20250826_1324_remove_mcp_config_from_integrations_.py  20250902_0737_add_code_review_in_agent_identifier.py  20250907_2117_initial_schema.py  20250908_1138_add_integration_providers_and_new_agent_.py  20250926_1815_add_api_test_suite_agent_and_playwright_.py
apps/api/app/: __init__.py  main.py  run_orchestrator.py
apps/api/app/agents/: catalog.py  enums.py
apps/api/app/agents/claude/: __init__.py  orchestrator.py
apps/api/app/agents/git/: __init__.py  ops.py
apps/api/app/agents/templates/code_analysis/: user.j2  (+4 more)
apps/api/app/agents/workflows/: __init__.py  api_testing_suite.py  base.py  code_analysis.py  code_reviewer.py  factory.py  requirements_to_tickets.py  root_cause_analysis.py  test_case_generation.py  test_generation.py
apps/api/app/api/: __init__.py  deps.py
apps/api/app/api/v1/: __init__.py  api.py
apps/api/app/core/: __init__.py  auth.py  cache.py  config.py  database.py  monitoring.py  oauth.py  tasks.py  template_renderer.py
apps/api/app/crud/: __init__.py  agent.py  ai_agent.py  base.py  deps.py  integration.py  project.py  user.py  user_agent_session.py  workflow.py
apps/api/app/db/: utils.py
apps/api/app/integrations/: __init__.py  enum.py  enums.py  integration_registry.py
apps/api/app/integrations/clients/: __init__.py  atlassian_client.py  base.py  clickup.py  cloudwatch.py  cloudwatch_client.py  datadog.py  datadog_client.py  discord.py  github.py  github_client.py  grafana.py  grafana_client.py  jira.py  new_relic.py  new_relic_client.py  notion_client.py  pagerduty.py  pagerduty_client.py  registry.py  sentry.py  sentry_client.py  slack.py
apps/api/app/integrations/oauth/: __init__.py  manager.py
apps/api/app/mcp/: renderer.py
apps/api/app/mcp/templates/: atlassian.j2  cloudwatch.j2  datadog.j2  github.j2  grafana.j2  new_relic.j2  notion.j2  pagerduty.j2  playwright.j2  sentry.j2
apps/api/app/mocks/: events.py
apps/api/app/models/: __init__.py  agent.py  ai_agent.py  audit.py  base.py  integration.py  project.py  rbac.py  user.py  user_agent_session.py  workflow.py
apps/api/app/schemas/: __init__.py  agent.py  agent_run.py  auth.py  code_assistance.py  file_upload.py  integration.py  monitoring.py  project.py  session.py  user_agent_session.py  workflow.py
apps/api/app/services/: agent_execution_service.py  agent_service.py  audit_service.py  claude_service.py  integration_service.py  mcp_service.py  rbac_service.py  workflow_service.py  workspace_service.py
apps/api/app/services/integrations/: __init__.py  base_service.py  github_service.py  jira_service.py
apps/api/app/streaming/: ai_v4_adapter.py  sse_adapter.py
apps/api/app/utils/: __init__.py  crypto.py  helpers.py  logger.py
apps/api/deployment/: Makefile
apps/api/docs/: agent-run-api.md  file-upload-api.md
apps/api/seeds/: __init__.py  seed_agents.py  seed_users.py
apps/api/seeds/data/: agents.json  users.json
apps/api/tests/: __init__.py  conftest.py  test_agent_schemas.py  test_agents.py  test_agents_enums.py  test_ai_agent_crud.py  test_ai_agent_integration.py  test_ai_agent_model.py  test_auth.py  test_auth_core.py  test_base_crud_comprehensive.py  test_claude_service.py  test_code_assistance.py  test_config.py  test_coverage_improvement.py  test_dashboard.py  test_deps.py  test_integration_api_endpoints.py  test_integration_crud_comprehensive.py  test_integration_schemas_coverage.py  test_integrations_endpoints_comprehensive.py  test_main.py  test_mcp_token_service_comprehensive.py  test_models.py  test_new_integrations_api.py  test_project_model.py  test_project_schemas.py  test_services.py  test_user_agent_session_model.py  test_user_agent_session_schemas.py  test_utils.py
(+366 files in other folders)
